2007-08-02  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* po/*:  Update translation files.

2007-07-31  Chris Lumens  <clumens@redhat.com>

	* validator/ksvalidator:  Don't traceback if there's not yet a
	processedFile.  preprocessKickstart is no longer in any class.

2007-07-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/network.py:  Change --class to --dhcpclass in
	all parse methods (#248912).

2007-07-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Require rhpl (#248953).  New release.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (_preprocessStateMachine, preprocessFromString,
	preprocessKickstart):  Don't take a "self" parameter since these
	methods don't live in a class anymore.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-07-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (_preprocessStateMachine, preprocessFromString,
	preprocessKickstart):  Add methods that handle the %ksappend
	directive.  This is taken from anaconda.
	* validator/ksvalidator:  Run the kickstart file through
	preprocessKickstart before parsing for real.

	* pykickstart/commands/ignoredisk.py:  Change destination of --disks
	parameter to match what is expected.

2007-07-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-07-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/ignoredisk.py:  RHEL4 supports --only-use too.

2007-07-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/ignoredisk.py (F8_IgnoreDisk):  Add support
	for the --only-use argument.
	* pykickstart/handlers/control.py:  Use F8_IgnoreDisk for F8.

2007-07-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/raid.py:  Need to pass "self" as the first